# badcqbot

./: .gitignore  .rustfmt.toml  Cargo.toml  app.js  package-lock.json  package.json
src/: main.rs
