[package]
name = "badcqbot"
version = "0.1.0"
authors = ["evshiron <evshiron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
config = "0.11.0"
futures-util = "0.3.17"
infer = "0.5.0"
json = "0.12.4"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
